# SoftPOS-Backend

./: .gitignore  Dockerfile  Makefile  README.md  README_TESTING.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  requirements_minimal.txt  run_rbac_tests.py  run_tests.py
alembic/: env.py
alembic/versions/: 001_initial_tables.py
app/: attestation.py  auth.py  card_schemes.py  database.py  db_models.py  emv_kernel.py  encryption.py  fraud_detection.py  hsm.py  idempotency.py  main.py  main_simple.py  main_test.py  models.py  monitoring.py  payment_processing.py  pin_verification.py  realtime.py  reporting.py  simple_auth.py  startup.py  terminal_management.py  three_ds.py  transaction_management.py  webhooks.py
app/endpoints/: card_schemes.py  emv.py  monitoring.py  payments.py  rbac.py  realtime.py  terminal_management.py  webhooks.py
app/models/: __init__.py  api.py  rbac.py  users.py
app/payment_processor/: __init__.py  core.py
app/rbac/: __init__.py  dependencies.py  service.py
app/templates/rbac/: admin_console.html  cs_console.html  merchant_portal.html
config/: rbac_config.yaml
tests/: conftest.py  test_integration.py  test_main.py  test_monitoring.py  test_payment_processing.py  test_rbac.py  test_security.py  test_terminal_management.py  test_webhooks.py
